<resources>
    <string name="app_name">PowerQualityAnalyser</string>
    <string name="back">Back</string>
    <string name="display_time">yyyy/MM/dd HH:mm</string>
    <string name="main_menu">MENU</string>
    <string name="main_meter">Meter</string>
    <string name="setup_overview">Overview</string>
    <string name="setup_system">System</string>
    <string name="setup_conect">Conect</string>
    <string name="setup_freq">Freq</string>
    <string name="setup_info">Info</string>
    <string name="Meter">Meter</string>
    <string name="Trend">Trend</string>
    <string name="Cursor">Cursor</string>
    <string name="On">ON</string>
    <string name="Off">OFF</string>
    <string name="Zoom">Zoom \n</string>
    <string name="Zoomstr">x</string>
    <string name="Hold">Hold</string>
    <string name="run">Run</string>
    <string name="scope">Scope</string>
    <string name="voltsampshertz">Volts/Amps\nHertz</string>
    <string name="powerenergy">Power&#038;Energy</string>
    <string name="harmonics">Harmonics</string>
    <string name="unbalance">Unbalance</string>
    <string name="warning">Warning</string>
    <string name="flicker">Flicker</string>
    <string name="transients">Transient</string>
    <string name="dips_swells">Dips&#038;Swells</string>
    <string name="surge">Inrush</string>
    <string name="trendchartrecord">Record/View</string>
    <string name="photo">Photo/Video</string>
    <string name="set">Setup</string>
    <string name="allmeter_votls_v">VOTLS</string>
    <string name="allmeter_current_a">CURRENT</string>
    <string name="allmeter_power">POWER</string>
    <string name="allmeter_power_enrgy">POWER&amp;ENRGY</string>
    <string name="allmeter_unbalance">UNBALANCE</string>
    <string name="allmeter_flicker">FLICKER</string>
    <string name="allmeter_harmonics">HARMONICS</string>
    <string name="allmeter_dips_swells">DIPS&#038;SWELLS</string>
    <string name="allmeter_surge">Inrush</string>
    <string name="allmeter_transients">TRANSIENTS</string>
    <string name="set_airplane">Airplane</string>
    <string name="set_wifi">WIFI</string>
    <string name="set_blue">BT</string>
    <string name="set_gps">GPS</string>
    <string name="set_date">Date</string>
    <string name="set_show">Display</string>
    <string name="set_timer">Timer</string>
    <string name="set_warn">Warning</string>
    <string name="set_caluc">Calculation</string>
    <string name="set_wir">Wiring Config</string>
    <string name="set_clamp">A Ratio</string>
    <string name="set_point">Capture</string>
    <string name="set_trend">Trend</string>
    <string name="set_delete">Delete</string>
    <string name="set_info">Device information</string>
    <string name="set_info_warranty_serial_number">Warranty serial number</string>
    <string name="set_info_serial_number">Serial Number</string>
    <string name="set_info_firmware_version">Fireware Version</string>
    <string name="set_info_main_board_version">Mainboard version</string>
    <string name="set_info_memory_card_capacity">SD card capacity</string>
    <string name="set_info_available_capacity">Available Capacity</string>
    <string name="set_info_button_menu">MENU</string>
    <string name="set_info_button_ok">OK</string>
    <string name="set_date2">Date/Time</string>
    <string name="set_date_format">Date format</string>
    <string name="set_time_format">Time format</string>
    <string name="set_system_time">Date&#38;Time</string>
    <string name="set_show_bright">Bright</string>
    <string name="set_show_color">Color</string>
    <string name="set_show_autooff">Auto power off</string>
    <string name="set_show_nightmode">Night mode</string>
    <string name="set_show_autooff_true">Auto off</string>
    <string name="set_show_autooff_false">Never off</string>
    <string name="set_show_color_vl1">L1</string>
    <string name="set_show_color_vl2">L2</string>
    <string name="set_show_color_vl3">L3</string>
    <string name="set_show_color_vn">N&#160;</string>
    <string name="set_show_color_al1">A&#160;L1</string>
    <string name="set_show_color_al2">A&#160;L2</string>
    <string name="set_show_color_al3">A&#160;L3</string>
    <string name="set_show_color_an">A&#160;N&#160;</string>
    <string name="set_caluc_var_title">Non-active values</string>
    <string name="set_caluc_var">Var(Non-active values)</string>
    <string name="set_caluc_var_yes">Broken down</string>
    <string name="set_caluc_wh_title">Energy unit</string>
    <string name="set_caluc_wh">Wh Energy unit</string>
    <string name="set_caluc_fk_title">Transformer Factor K</string>
    <string name="set_caluc_fk">FK Transformer Factor K</string>
    <string name="set_caluc_fk_q">q</string>
    <string name="set_caluc_fk_e">E</string>
    <string name="set_caluc_fr_title">Phase hamonic ratios</string>
    <string name="set_caluc_fr">%F-%r Phase hamonic ratios</string>
    <string name="set_caluc_fr_one">Fundamental value as reference</string>
    <string name="set_caluc_fr_two">Total value as reference</string>
    <string name="set_caluc_plt_title">Long term flicker</string>
    <string name="set_caluc_plt">Sliding window</string>
    <string name="set_caluc_plt_content">PLT Long term flicker</string>
    <string name="set_caluc_botton_var">Var</string>
    <string name="set_caluc_botton_wh">Wh</string>
    <string name="set_caluc_botton_fk">FK</string>
    <string name="set_caluc_botton_fr">%F-%r</string>
    <string name="set_caluc_botton_ptl">PLT</string>
    <string name="set_botton_zh">ZH-CN</string>
    <string name="set_botton_en">EN</string>
    <string name="set_botton_fr">FR</string>
    <string name="set_botton_de">DE</string>
    <string name="vlot_bottom_menu">MENU</string>
    <string name="vlot_bottom_run">RUN</string>
    <string name="vlot_bottom_hold">HOLD</string>
    <string name="config_set">Setting</string>
    <string name="config_bottom_viewconfig">VIEW\nCONFIG</string>
    <string name="config_bottom_scope_scale">SCOPE\nSCALE</string>
    <string name="config_bottom_ok">OK</string>
    <string name="config_bottom_manualset">MANUAL\nSETUP</string>
    <string name="config_bottom_back">BACK</string>
    <string name="config_nominal_frequency">NOMINAL FREQUENCY</string>
    <string name="config_nominal_frequency2">Nominal frequency</string>
    <string name="config_nominal_frequency_50hz">50Hz</string>
    <string name="config_nominal_frequency_60hz">60Hz</string>
    <string name="config_nominal_frequency_400hz">400Hz</string>
    <string name="config_nominal_voltage">NOMINAL </string>
    <string name="config_user_info_user">USER CONFIG</string>
    <string name="config_user_info_new">NEW</string>
    <string name="config_user_info_edit">EDIT</string>
    <string name="config_user_info_delete">DELETE</string>
    <string name="config_user">User:</string>
    <string name="config_date">Date:</string>
    <string name="config_time">Time:</string>
    <string name="config_config">Config:</string>
    <string name="config_freq">Freq:</string>
    <string name="config_vnom">Vnom:</string>
    <string name="config_limits">Limits:</string>
    <string name="config_phase">Phase</string>
    <string name="config_neutral">Neutral</string>
    <string name="config_clamp">Clamp</string>
    <string name="config_a_range">A Range</string>
    <string name="config_v_ratio">V Ratio</string>
    <string name="config_a_ratio">A Ratio</string>
    <string name="config_amps">AMPS SCALING</string>
    <string name="config_volt">VOLT SCALING</string>
    <string name="config_scope_scale">SCOPE SCALE</string>
    <string name="config_amps2">AMPS\nSCALING</string>
    <string name="config_volt2">VOLT\nSCALING</string>
    <string name="config_amps_range">Amp range</string>
    <string name="config_volt_range">Volt range</string>
    <string name="config_volt_ratio">Volt ratio:</string>
    <string name="config_amp_clamp">Amp clamp:</string>
    <string name="config_clamp_range">Range:</string>
    <string name="config_nominal_range">Nominal range:</string>
    <string name="config_sensitivity">Sensitivity:</string>
    <string name="config_amp_ratio">Ratio:</string>
    <string name="set_wir_content1">3 elements(3 wattmeters - virtual neutral)</string>
    <string name="set_wir_content2">2 elements(2 wattmeters --Aron\'s method)(L3 current sensor optional)</string>
    <string name="set_wir_content3">2 elements(2 wattmeters --Aron\'s method)(L1 current sensor optional)</string>
    <string name="set_wir_content4">2 elements(2 wattmeters --Aron\'s method)(L2 current sensor optional)</string>
    <string name="saveAs">Save as:</string>
    <string name="Interval">Interval:</string>
    <string name="fileName">input file name</string>
    <string name="loggerDuration">Duration:</string>
    <string name="Parameterset">Parameter-set</string>
    <string name="Urms">Urms</string>
    <string name="Upk">Upk</string>
    <string name="Irms">Irms</string>
    <string name="udc">Udc</string>
    <string name="Ipk">Ipk</string>
    <string name="Freq">Freq</string>
    <string name="Vfund">Vfund</string>
    <string name="Afund">Afund</string>
    <string name="PF">PF</string>
    <string name="Uabc">Uabc</string>
    <string name="Urms2">U½rms</string>
    <string name="Irms2">I½rms</string>
    <string name="fV">φV</string>
    <string name="fA">φA</string>
    <string name="Uthd">Uthd</string>
    <string name="Ithd">Ithd</string>
    <string name="Uthd2_50">Uthd2–50</string>
    <string name="Ithd2_50">Ithd2–50</string>
    <string name="Stop">Stop</string>
    <string name="Sure">Sure</string>
    <string name="No">No</string>
    <string name="dilogforfilename">File name already exist</string>
    <string name="Parameter">Parameter</string>
    <string name="Event">Event</string>
    <string name="Rename">Rename</string>
    <string name="Cover">Cover</string>
    <string name="defaul">Defaults</string>
    <string name="Start">Start</string>
    <string name="memoryHint">Less than 5% memory</string>
    <string name="energy">ENERGY</string>
    <string name="power">POWER</string>
    <string name="energy_reset">Reset</string>
    <string name="logger_parameter">PARAMETER</string>
    <string name="logger_logger">LOGGER</string>
    <string name="logger_view">VIEW</string>
    <string name="parameter_VoltAmp">Volt&#038;Amp</string>
    <string name="parameter_Inrush">Inrush</string>
    <string name="parameter_Shipboard">Shipboard</string>
    <string name="parameter_Harmonic">Harmonic</string>
    <string name="parameter_DipsSweels">Dips&#038;Sweels</string>
    <string name="parameter_Unbalance">Unbalance</string>
    <string name="parameter_Power">Power</string>
    <string name="parameter_Energy">Energy</string>
    <string name="parameter_Flicker">Flicker</string>
    <string name="parameter_Frequency">Frequency</string>
    <string name="parameter_amp_harm">Amp Harmonic</string>
    <string name="parameter_volt_harm">Volt Harmonic</string>
    <string name="parameter_Urms">Urms</string>
    <string name="parameter_Vrms">Vrms</string>
    <string name="parameter_Arms">Arms</string>
    <string name="parameter_Ucf">Ucf</string>
    <string name="parameter_Vcf">Vcf</string>
    <string name="parameter_Acf">Acf</string>
    <string name="parameter_Upeak1">Upeak+</string>
    <string name="parameter_Upeak2">Upeak-</string>
    <string name="parameter_Vpeak1">Vpeak+</string>
    <string name="parameter_Vpeak2">Vpeak-</string>
    <string name="parameter_Apeak1">Apeak+</string>
    <string name="parameter_Apeak2">Apeak-</string>
    <string name="parameter_Udc">Udc</string>
    <string name="parameter_Vdc">Vdc</string>
    <string name="parameter_Adc">Adc</string>
    <string name="parameter_pstmin">Pst(1min)</string>
    <string name="parameter_pst">Pst.</string>
    <string name="Type">Type</string>
    <string name="Time">Time</string>
    <string name="UserName">UserName</string>
</resources>