<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:background="#26292c"
    android:layout_height="350dp">

    <TextView
        android:id="@+id/tv_message"
        android:text="@string/dilogforfilename"
        android:textSize="@dimen/textsize_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="25dp"/>

   <LinearLayout
       android:layout_alignParentBottom="true"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <Button
           android:id="@+id/button_left"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="@dimen/dimen_50"
           android:text="@string/Rename"/>
       <Button
           android:id="@+id/button_right"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="@dimen/dimen_50"
           android:text="@string/Cover"/>
   </LinearLayout>

</RelativeLayout>