<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/set_text_color"
        android:textSize="@dimen/textsize_35"
        android:text="@string/set_show_autooff"/>


    <TextView
        android:id="@+id/set_show_autooff_true"
        android:layout_marginLeft="200dp"
        android:layout_width="wrap_content"
        android:textColor="@color/set_text_color"
        android:textSize="@dimen/textsize_30"
        android:text="@string/set_show_autooff_true"
        android:gravity="center"
        android:layout_height="wrap_content"/>



    <TextView
        android:id="@+id/set_show_autooff_false"
        android:layout_marginLeft="@dimen/dimen_20"
        android:textColor="@color/set_text_color"
        android:textSize="@dimen/textsize_30"
        android:gravity="center"
        android:text="@string/set_show_autooff_false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>