<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_50">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="@dimen/dimen_120"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/saveAs"
            android:textColor="@color/wir_color_black"

            android:textSize="@dimen/textsize_25" />

        <EditText
            android:paddingLeft="@dimen/dimen_5"
            android:background="@mipmap/logger_name_bg"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/fileName"
            android:id="@+id/edit_filename"
            android:textColor="@color/colorwhite"
            android:paddingStart="@dimen/dimen_10"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/colorwhite"
            android:lines="1"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginRight="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="@dimen/dimen_120"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/Interval"
            android:textColor="@color/wir_color_black"
            android:textSize="@dimen/textsize_25" />
        <com.cem.powerqualityanalyser.view.AmountViewHorizontal
            android:layout_width="wrap_content"
            android:id="@+id/interval"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="@dimen/dimen_120"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/loggerDuration"
            android:textColor="@color/wir_color_black"
            android:textSize="@dimen/textsize_25" />
        <com.cem.powerqualityanalyser.view.AmountViewHorizontal
            android:layout_width="wrap_content"
            android:id="@+id/duration"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>